--- a/footer.html
+++ b/footer.html
@@ -241,7 +241,7 @@
                   <a href="https://legaldesignsummit.com" target="_blank">
                         <img loading="lazy" src="images/collabs/Legal-D(DorraHarrar)UPDATED.png" alt="Dorra Harrar"
                               class="large-logo" />
-                        <a href="#" target=" _blank"><img loading="lazy"
+                        <a href="https://www.plmj.com/en/" target=" _blank"><img loading="lazy"
                                     src="images/collabs/PLMJ_Logo_V.S1.POS.jpg"></a>
                   </a>
                   <a href="https://legaldesignsummit.com" target="_blank">
@@ -278,6 +278,13 @@
                               loading="lazy" src="images/collabs/Domstolsverket.png"></a>
                   <a href="https://lawyersdesignschool.com/" target="_blank">
                         <img loading="lazy" src="images/collabs/lawyer_design_school.png" alt="Lawyers Design School"
+                              class="large-logo" />
+                  </a>
+                  <a href="#" target="_blank">
+                        <img loading="lazy" src="images/collabs/e-legal.png" alt="E-legal" class="large-logo" />
+                  </a>
+                  <a href="#" target="_blank">
+                        <img loading="lazy" src="images/collabs/logo_SDN Finland Chapter_RGB.jpg" alt="E-legal"
                               class="large-logo" />
                   </a>
 
