--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,8 @@
 			<a href="https://legaldesignsummit.com" target="_blank">
 				<img loading="lazy" src="images/collabs/Legal-D(DorraHarrar)UPDATED.png" alt="Dorra Harrar"
 					class="large-logo" />
-				<a href="#" target=" _blank"><img loading="lazy" src="images/collabs/PLMJ_Logo_V.S1.POS.jpg"></a>
+				<a href="https://www.plmj.com/en/" target=" _blank"><img loading="lazy"
+						src="images/collabs/PLMJ_Logo_V.S1.POS.jpg"></a>
 			</a>
 			<a href="https://legaldesignsummit.com" target="_blank">
 				<img loading="lazy" src="images/collabs/RTK logo (Peegi Kaibald).png" alt="RTK" class="large-logo" />
@@ -1330,6 +1331,13 @@
 					src="images/collabs/Domstolsverket.png"></a>
 			<a href="https://lawyersdesignschool.com/" target="_blank">
 				<img loading="lazy" src="images/collabs/lawyer_design_school.png" alt="Lawyers Design School"
+					class="large-logo" />
+			</a>
+			<a href="#" target="_blank">
+				<img loading="lazy" src="images/collabs/e-legal.png" alt="E-legal" class="large-logo" />
+			</a>
+			<a href="#" target="_blank">
+				<img loading="lazy" src="images/collabs/logo_SDN Finland Chapter_RGB.jpg" alt="E-legal"
 					class="large-logo" />
 			</a>
 
