--- a/blog.html
+++ b/blog.html
@@ -727,6 +727,8 @@
 
 		<nav class="blog-nav" aria-label="Blog post list">
 			<ul>
+				<li><a href="#lds-post-6"> BrainFactory 2025 - Expanding the Playground for Legal Design</a>
+				</li>
 				<li><a href="#lds-post-5">Speaker Testimonial Series: Outi Nokkonen - Reimagining Public Procurement</a>
 				</li>
 				<li><a href="#lds-post-4">Speaker Testimonial Series: Peegi Kaibald - How Legal Design is
@@ -738,6 +740,84 @@
 				<li><a href="#lds-post-1">The Legal Design Summit: What we stand for by Sade Mäntylä</a></li>
 			</ul>
 		</nav>
+		<article id="lds-post-6" data-tags="Blog-BrainFactory">
+
+			<h2>LDS Blog #6: BrainFactory 2025 - Expanding the Playground for Legal Design
+			</h2>
+			<div class="tags">
+				<span class="tag">#BrainFactory</span>
+			</div>
+
+			<br>
+			<p>
+				For years, the BrainFactory concept has been one of the most loved parts of the Legal Design Summit: an
+				immersive three-day experience where a small group of around 40–45 participants worked side-by-side with
+				top facilitators from around the world to tackle real-life legal challenges
+			</p>
+			<br>
+			<p>
+				Over the years, we’ve heard more than once: “BrainFactory changed my life.” That kind of feedback is
+				both humbling and energising — a reminder of the power of bringing people together in a space that
+				sparks creativity, courage, and collaboration.
+			</p>
+			<p>
+				This year we asked: how might we make BrainFactory accessible to more people without diminishing
+				opportunities for individual connection, creativity, and shared learning? What resulted is a bold leap:
+				tripling the number of attendees by welcoming 125 participants into the experience across 9 workshops.
+			</p>
+			<p>By expanding the number and variety of workshops, our goal is to significantly increase the number of
+				people who get to experience and lead BrainFactory. More participants mean more perspectives, more
+				diversity, and more accessibility. We believe that’s where the magic happens.</p>
+
+
+			<h3>From a small lab to a city-wide experience</h3>
+			<p>
+				Instead of three days in one location, BrainFactory will unfold in a single, dynamic day across
+				Helsinki. Nine workshops, each led by a unique team of facilitators, will dive into different corners of
+				legal design. From AI to sustainability to access to justice, participants can explore specialized
+				themes or start from the basics if they’re just beginning their journey.
+			</p>
+			<p>
+				This shift isn’t just about efficiency, although it helps participants who might only be able to take
+				one more day off work. It’s about creating more intersections: more voices, more experiences, more
+				chances for people to meet collaborators they’d never otherwise cross paths.
+			</p>
+
+
+			<h3>Co-creation at its core</h3>
+			<p>
+				While the BrainFactory spirit has always been co-creative, we wanted to extend that opportunity to the
+				facilitators themselves. Some workshop teams are made up of long-time friends and past collaborators,
+				already attuned to each other’s ways of thinking. Others are brand-new combinations, meeting for the
+				first time through this process. In both cases, the result is a vibrant space where people who share a
+				deep passion for legal design — and have been working on it professionally for years — come together to
+				create something unique. Along the way, they’re learning from each other, exchanging methods, and
+				inspiring one another in real time.
+
+			</p>
+			<p>
+				We sought out facilitators who could bring substance from different areas of legal design, from
+				different areas of the world, ensuring the program reflects the diversity and depth of the field today.
+				It all comes together thanks to sponsors who make the workshops possible and bring their own expertise
+				to the table. We are incredible grateful to our sponsors in this process.
+			</p>
+
+			<h3>Always learning and evolving</h3>
+			<p>
+				As always, BrainFactory is a work in progress. We welcome feedback from every participant, so that in
+				the future, it can grow in directions we can’t even imagine yet.
+			</p>
+			<footer class="author">
+				<img src="images/team/team-2025/Laura_Hartnett_Director of Operations.jpg"
+					alt="Portrait of Laura Hartnett" />
+				<img src="images/team/team-2025/Mia_Ihamuotila.jpg" alt="Portrait of Mia Ihamuotila" />
+				<p>
+					This blog post was written by <strong>Laura Hartnett</strong> and <stong>Mia Ihamuotila</stong>.
+					Laura is Head of Operations and BrainFactory and Mia is the Chair of the Legal Design Summit.
+				</p>
+			</footer>
+
+		</article>
 
 		<article id="lds-post-5" data-tags="Speaker Testimonials">
 
