--- a/blog.html
+++ b/blog.html
@@ -812,7 +812,7 @@
 					alt="Portrait of Laura Hartnett" />
 				<img src="images/team/team-2025/Mia_Ihamuotila.jpg" alt="Portrait of Mia Ihamuotila" />
 				<p>
-					This blog post was written by <strong>Laura Hartnett</strong> and <stong>Mia Ihamuotila</stong>.
+					This blog post was written by <strong>Laura Hartnett</strong> and <strong>Mia Ihamuotila</strong>.
 					Laura is Head of Operations and BrainFactory and Mia is the Chair of the Legal Design Summit.
 				</p>
 			</footer>
