update Lauras title

--- a/blog.html
+++ b/blog.html
@@ -849,7 +849,7 @@
 					height="640" loading="lazy" decoding="async" />
 				<p>
 					This blog post was written by <strong>Laura Hartnett</strong> and <strong>Mia Ihamuotila</strong>.
-					Laura is Head of Operations and BrainFactory and Mia is the Chair of the Legal Design Summit.
+					Laura is Team Lead of BrainFactory and Mia is the Chair of the Legal Design Summit.
 				</p>
 			</footer>
 
