--- a/blog.html
+++ b/blog.html
@@ -762,6 +762,10 @@
 
 		<nav class="blog-nav" aria-label="Blog post list">
 			<ul>
+				<li><a href="#lds-post-7"> Speaker Testimonial Series: Tiago Guerrerio - When Design Meets Law: Bridging
+						Creative
+						Innovation and Legal Practice</a>
+				</li>
 				<li><a href="#lds-post-6"> BrainFactory 2025 - Expanding the Playground for Legal Design</a>
 				</li>
 				<li><a href="#lds-post-5">Speaker Testimonial Series: Outi Nokkonen - Reimagining Public Procurement</a>
@@ -775,6 +779,100 @@
 				<li><a href="#lds-post-1">The Legal Design Summit: What we stand for by Sade Mäntylä</a></li>
 			</ul>
 		</nav>
+		<article id="lds-post-7" data-tags="Blog-Speakertestimonial">
+
+			<h2>LDS Blog #7. Speaker Testimonial Series: Tiago Guerrerio - When Design Meets Law: Bridging Creative
+				Innovation and Legal Practice
+			</h2>
+			<div class="tags">
+				<span class="tag">#Speaker Testimonials</span>
+			</div>
+			<footer class="author">
+				<img src="images/speakers/2025/Tiago Guerreiro_crop.jpg" alt="Tiago Guerreiro">
+				<p>
+					Tiago will be on Day 2 of the 2025 Summit presenting Fireside chat: “From Primary School to
+					University:
+					How Legal Design can Redesign Legal Literacy and Education” with Barbora Obracajova, Michael
+					Doherty,
+					Ruy Coppola Jr. See the full program <a href="program.html">here</a>.
+				</p>
+			</footer>
+			<br>
+			<p>
+				We asked Tiago Guerreiro to share his Legal Design story, and discovered how a bold résumé statement led
+				to a revolutionary approach to legal education and practice!
+				In this ongoing series featuring Legal Design Summit 2025 Speaker Testimonials, we introduce you to
+				inspiring stories that demonstrate Legal Design's transformative power across different sectors and
+				cultures, spotlighting professionals who are reshaping how we think about law, design, and human
+				experience.
+			</p>
+			<p>
+				Meet Tiago Guerreiro, who is the litigation lawyer,specializing in litigation and social economy. He
+				founded his design company Equador in 2018 while taking his first steps as a lawyer at PLMJ. For years,
+				he felt the tension between two worlds that seemed impossible to combine, until he discovered legal
+				design at an innovation event! Now, he's on a mission to add "that pinch of salt to law," applying legal
+				design tools to his daily practice while pioneering legal literacy projects for children. His belief is
+				that education is the most powerful tool for positive social change, especially when introduced to those
+				with a beginner's mindset.
+			</p>
+			<p>
+				Through three key questions, we explored our Legal Design Summit 2025 speakers' journeys, and their
+				responses are truly inspiring! You'll find Tiago's thoughts below.
+
+			</p>
+
+			<h3>Tell us your legal design story - what brought you here?</h3>
+			<p>
+				It all started before I entered law school.
+				I was already working on design projects, mostly as a way of expressing my creativity by exploring
+				design tools. Over time, it became more professional, to the point where I eventually founded my design
+				company, Equador, in 2018.
+			</p>
+			<p>
+				For three years, I ran Equador while taking my first steps as a litigation lawyer at PLMJ, which led me
+				to question even more why everything about the legal world seemed so resistant to change. Back then,
+				Equador had a Portuguese Faculty of Law as a client and, even from a marketing/communication
+				perspective, it was sometimes difficult for them to innovate (but we managed!).
+			</p>
+			<p>
+				However, in terms of the legal work I was doing at the firm, it felt impossible at the time to combine
+				both worlds—design and law.
+
+			</p>
+			<p>
+				A few years later, at an innovation event promoted by the firm, I discovered legal design and everything
+				suddenly clicked!
+			</p>
+			<p>
+				Since then, I have been applying legal design tools and principles to my daily work, both in the legal
+				literacy project I will discuss and in my practice as a lawyer focusing on litigation and the social
+				economy.
+			</p>
+
+			<h3>What are you most looking forward to about the LDS?</h3>
+			<p>
+				To learn the new ways of how legal design can be implemented to create a positive impact. And the LDS
+				program seems to “offer” quite a few!
+
+			</p>
+
+			<h3>What key message do you hope to convey? (a teaser on your presentation)</h3>
+			<p>
+				Education is the most powerful tool we have to bring about positive changes in our society, especially
+				when introduced to those who still have a beginner’s mindset—children!
+			</p>
+			<p>
+				And if law is the science that regulates life in society, then our children (and we, ourselves)
+				definitely need to be (well) educated about it!
+			</p>
+			<footer class="author">
+				<img src="images/team/team-2025/Aysenur.png" alt="Portrait of Ayşenur Kölgesiz" />
+				<p>
+					The introduction to this blog post was written by <strong>Ayşenur Kölgesiz</strong>, part of the
+					Legal Design Summit 2025 and Communication and Social Media Team.
+				</p>
+			</footer>
+		</article>
 		<article id="lds-post-6" data-tags="Blog-BrainFactory">
 
 			<h2>LDS Blog #6: BrainFactory 2025 - Expanding the Playground for Legal Design
