new LinkedIn material

--- a/index.html
+++ b/index.html
@@ -1370,6 +1370,37 @@
 
 				<div class="microcard">
 					<iframe
+						src="https://www.linkedin.com/embed/feed/update/urn:li:share:7367206570557935617?collapsed=1"
+						height="670" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+				</div>
+				<div class="microcard">
+					<iframe
+						src="https://www.linkedin.com/embed/feed/update/urn:li:share:7367206127698128897?collapsed=1"
+						height="670" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+				</div>
+				<div class="microcard">
+					<iframe
+						src="https://www.linkedin.com/embed/feed/update/urn:li:share:7367206346183593985?collapsed=1"
+						height="670" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+				</div>
+				<div class="microcard">
+					<iframe
+						src="https://www.linkedin.com/embed/feed/update/urn:li:share:7366756376456376324?collapsed=1"
+						height="670" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+				</div>
+				<div class="microcard">
+					<iframe
+						src="https://www.linkedin.com/embed/feed/update/urn:li:share:7366755273106931714?collapsed=1"
+						height="670" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+				</div>
+				<div class="microcard">
+					<iframe
+						src="https://www.linkedin.com/embed/feed/update/urn:li:share:7366458825173798913?collapsed=1"
+						height="670" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+				</div>
+
+				<div class="microcard">
+					<iframe
 						src="https://www.linkedin.com/embed/feed/update/urn:li:share:7361700308256808962?collapsed=1"
 						height="670" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 				</div>
